2003-05-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/m4/m4browser.c: Regen.
	* parsers/m4/m4browser.l: Pass SN_FUNC_DEF
	as the second argument to sn_insert_xref
	for a global variable access. The docs
	indicate the SN_REF_TO_GLOB_VAR was not
	a valid context to be passing there.
	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Ditto.
	* tests/parsers/m4.test: Update an xref
	output that was expecting "gv" instead
	of "fu" for a GLOBAL call from scope.
	* tests/parsers/php.test: Add a easy
	mode check and a couple of global var
	xref tests to test for SN_FUNC_DEF change.

2003-05-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Fixup mode switching
	bug when we transition from a FUNCTION mode to
	INITIAL and then back to FUNCTION.
	* tests/parsers/php.test: Add test case for
	FUNCTION mode swithing bug. Also test attempt
	to switch to HTML mode inside a comment, it
	should fail.

2003-05-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/m4/m4browser.c: Regen.
	* parsers/m4/m4browser.l: Add FUNCTION rule
	to support read, write, and call xrefs
	inside macros. Set the function declaration
	to include the entire text of the macro
	instead of just the macro name.
	* tests/parsers/m4.test: Add new var test
	cases for var xrefs in macros. Update
	macro definition test cases so that
	whole function is included, not just name.
	Add test for comments in macros.

2003-05-20  John Lash  <jkl@speakeasy.net>

	* gui/misc.tcl (sn_session, sn_nosplash):
	* gui/sninit.tcl (sn_read_commandline_arguments):
	Add option --nosplash to turn off splash screen.
	Helps when running over a slow link.

2003-05-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add code to parse
	function bodies and generate xrefs for
	function calls inside a function declaration.
	Add new FUNCTION state and use parser state